--- a/css/style.css
+++ b/css/style.css
@@ -277,12 +277,26 @@ header .container .profile a:hover{
     padding: 1.8rem 0;
 }
 .home-user .search .container{
-    text-align: right;
+ display: grid;
+ grid-template-columns: 40% 40%;
+ justify-content: space-between;
+}
+
+.home-user .search .container #select{
+    border: 1px solid #333;
+    background-color: rgba(0, 0, 0, 0.566);
+    color: #fff;
+    outline: none;
+    
+}
+.home-user .search .container #select option{
+     background: none;
+     border: 1px solid #333;
 }
 
 .home-user .search .container form #search{
     padding: 0.3rem 0.5rem;
-    background: none;
+    background-color: #333;
     border: 1px solid #333;
     margin: 0;
     color: #fff;
